--- a/content/05757.md
+++ b/content/05757.md
@@ -12,7 +12,7 @@ requires: 1
 
 ## Abstract
 
-Ethereum improvement proposals (EIPs) occasionally link to resources external to this repository. This document sets out the requirements for origins that may be linked to, and the process for approving a new origin.
+Ethereum improvement proposals (EIPs) occasionally link to resources externaoeual to this repository. This document sets out the requirements for origins that may be linked to, and the process for approving a new origin.
 
 ## Specification
 
